Removed WindowScroller and fixed InfiniteLoader flickering.

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,15 @@ body {
     }
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 3px;
+  background: #e6e6e6;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b9bcc0;
+  border-radius: 3px;
+  width: 10px;
+}
